Add some contents and structure to html and css files, adapt title alignment and parenthesis text visibility to  different layouts.

--- a/index.html
+++ b/index.html
@@ -1,22 +1,126 @@
 <!DOCTYPE html>
 
-<html lang="it">
+<html lang="en">
 
 <head>
-
+    <!-- Charset -->
     <meta charset="UTF-8">
 
+    <!-- Viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="style.css">
+    <!-- Nerko One font embedding -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
 
+    <!-- Stylesheet linking -->
+    <link rel="stylesheet" href="./css/style.css">
+
+    <!-- Page title -->
     <title>Giallo Booleano</title>
-
 </head>
 
 <body>
 
+    <!-- #region Page header -->
+    <header class="page-header p-1">
 
+        <!-- Page home link -->
+        <a class="home-link text-decoration-none" href="./">
+
+            <!-- Page title -->
+            <h1 class="page-title text-uppercase text-secondary text-shadow">Giallo Booleano</h1>
+
+        </a>
+
+    </header>
+    <!-- #endregion Page header -->
+
+    <!-- #region Page main -->
+    <main class="page-main">
+
+        <!-- #region Recipe section -->
+        <section class="recipe bg-light">
+
+            <!-- Recipe category -->
+            <span class="recipe-category text-uppercase text-light">Dolci e desserts</span>
+
+            <!-- Recipe title -->
+            <h2 class="recipe-title text-primary">Tiramisù
+                <!-- Recipe title specification -->
+                <span class="recipe-title-specification"> (Dolce Tradizionale)</span>
+            </h2>
+
+            <!-- #region Recipe header -->
+            <header class="recipe-header">
+
+            </header>
+            <!-- #endregion Recipe header -->
+
+            <!-- #region Advertising banner -->
+            <aside class="advertising-banner">
+
+                <!-- Advertising banner link -->
+                <a class="banner-link" href="#" target="_blank">
+
+                    <!-- Advertising banner image -->
+                    <img class="banner-image" src="./img/banner.png" alt="Giallo Booleano cooking classes">
+
+                </a>
+
+            </aside>
+            <!-- #endregion Advertising banner -->
+
+            <!-- #region Recipe presentation -->
+            <section class="recipe-presentation" lang="en">
+
+                <!-- Recipe presentation section title -->
+                <h3 class="presentation-title">Presentation</h3>
+
+                <!-- Separator -->
+                <hr>
+
+                <!-- Recipe image -->
+                <img class="presentation-image" src="./img/tiramisu.jpg" alt="Tiramisù">
+
+                <!-- Recipe presentation -->
+                <p class="presentation-text">
+                    Back in the day, grandmothers used to prepare a breakfast that we might call humble today, but was
+                    considered very rich at the time! Today the recipe is still unchanged, just break a very fresh egg
+                    into
+                    a glass, beat it with sugar, and add coffee or hot milk, for children, or <strong>Marsala
+                        wine</strong>
+                    or aniseed for adults. This marvelous cream gave rise to mascarpone cream used to make
+                    <strong>Tiramisù</strong> (mascarpone cheese and ladyfingers dessert). This is the <strong>best
+                        italian
+                        dessert</strong>, the most popular and beloved of them all, and it has also birthed many other
+                    versions, even an egg-free Tiramisù! There is also a strawberry and Nutella tiramisù! Although the
+                    origins of this famous dessert are unclear, because it is disputed between the regions of Veneto,
+                    Friuli-Venezia Giulia, Piedmont, and Tuscany, it remains a cornerstone of italian cusine and it's
+                    widely
+                    prepared from North to South. Unfortunately, we weren't able to find out who invented it, but we can
+                    certainly teach you how to prepare your best tiramisù ever. So here's the recipe: try it and let us
+                    know
+                    what you think!
+                </p>
+
+            </section>
+            <!-- #endregion Recipe presentation -->
+
+        </section>
+        <!-- #endregion Recipe section -->
+
+    </main>
+    <!-- #endregion Page main -->
+
+    <!-- #region Page footer -->
+    <footer class="page-footer p-1 bg-primary">
+
+
+
+    </footer>
+    <!-- #endregion Page footer -->
 
 </body>
 
