Add page footer and adapt it to different layouts.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <a class="home-link text-decoration-none" href="./">
 
             <!-- Page title -->
-            <h1 class="page-title d-inline fw-normal text-uppercase font-family-nerko-one fs-4 text-secondary text-shadow">Giallo Booleano</h1>
+            <h1 class="page-title d-inline fw-normal text-uppercase font-family-nerko-one fs-4 text-secondary">Giallo Booleano</h1>
 
         </a>
 
@@ -239,9 +239,23 @@
     <!-- #endregion Page main -->
 
     <!-- #region Page footer -->
-    <footer class="page-footer p-1 bg-primary">
+    <footer class="page-footer justify-content-between column-gap-3 p-1 bg-primary text-white">
 
+        <!-- Company information -->
+        <address class="company-information fst-normal py-1 lh-2">
+            <strong class="company-name">&copy; 2021 Giallo Booleano S.p.a.</strong>
+            <br>
+            <span class="company-address">Via Tal dei tali, 10 - 88046 Lamezia Terma - VAT 43940293020</span>
+        </address>
 
+        <!-- Legal links navigation bar -->
+        <nav class="legal-links d-flex flex-wrap justify-content-center align-items-center gap-1-5 py-1 text-center">
+            <a href="#">About us</a>
+            <a href="#">Terms of use</a>
+            <a href="#">Privacy policy</a>
+            <a href="#">Cookie policy</a>
+            <a href="#">Disclaimer</a>
+        </nav>
 
     </footer>
     <!-- #endregion Page footer -->
