--- a/index.html
+++ b/index.html
@@ -105,24 +105,23 @@
 
                         <!-- Recipe information list -->
                         <ul class="information-text-list flex-wrap row-gap-1 py-1">
-                            <li class="information-text-list-item col-4 lh-2">
+                            <li class="information-text-list-item">
                                 <span>Difficoltà: </span>
                                 <b>Facile</b>
                             </li>
-                            <li class="information-text-list-item col-4 lh-2">
+                            <li class="information-text-list-item">
                                 <span>Tempo: </span>
                                 <b>40 min</b>
                             </li>
-                            <li class="information-text-list-item col-4 lh-2">
-
+                            <li class="information-text-list-item">
                                 <span>Porzione per: </span>
                                 <b>8 persone</b>
                             </li>
-                            <li class="information-text-list-item col-4 lh-2">
+                            <li class="information-text-list-item">
                                 <span>Costo: </span>
                                 <b>contenuto</b>
                             </li>
-                            <li class="information-text-list-item col-4 lh-2">
+                            <li class="information-text-list-item">
                                 <b>Note</b>
                                 <span>: +2 ore di riposo in frigo</span>
                             </li>
